Bug fix for optimized image policy image color inversion fails with border radius

The cause is when there is a border radius, current code path only
copies the border radius properties to be painted.
This CL fixes the problem by copying other properties when image
policy is violated.


Bug: 841756
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I29ed9b9860de3ae3f07217fd33d517c4c42909e5
Reviewed-on: https://chromium-review.googlesource.com/1138973
Commit-Queue: Luna Lu <loonybear@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576673}
Former-commit-id: 1c11e7d534f1a466b5ea5314c6fc93bc74ec8a8e